# pystatsbio

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: trigger-docs-rebuild.yml
.release/: CHECKLIST.md  UNRELEASED.md  release.py
docs/: GPU_BACKEND_NOTES.md  SGC_BIO_DIRECTIVE.md  SGC_CORE_DIRECTIVE.md
docs/_build/html/: .buildinfo  diagnostic.html  doseresponse.html  genindex.html  index.html  objects.inv  pk.html  power.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: diagnostic.doctree  doseresponse.doctree  index.doctree  pk.doctree  power.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pystatsbio/diagnostic/: _accuracy.html  _batch.html  _common.html  _cutoff.html  _roc.html
docs/_build/html/_modules/pystatsbio/doseresponse/: _batch.html  _bmd.html  _common.html  _fit.html  _models.html  _potency.html
docs/_build/html/_sources/: diagnostic.rst.txt  doseresponse.rst.txt  index.rst.txt  pk.rst.txt  power.rst.txt
docs/_build/html/_static/: custom.css
pystatsbio/: __init__.py
pystatsbio/diagnostic/: __init__.py  _accuracy.py  _batch.py  _common.py  _cutoff.py  _roc.py
pystatsbio/doseresponse/: __init__.py  _batch.py  _bmd.py  _common.py  _fit.py  _models.py  _potency.py
pystatsbio/epi/: __init__.py  _common.py  _mantel_haenszel.py  _measures.py  _standardize.py
pystatsbio/gee/: __init__.py  _common.py  _correlation.py  _estimating_equations.py  _sandwich.py
pystatsbio/gee/backends/: __init__.py  _gpu_correlation.py  _gpu_family.py  gpu_fit.py
pystatsbio/meta/: __init__.py  _common.py  _fixed.py  _heterogeneity.py  _random.py
pystatsbio/pk/: __init__.py  _common.py  _nca.py
pystatsbio/power/: __init__.py  _anova.py  _cluster.py  _common.py  _crossover.py  _noninferiority.py
tests/diagnostic/: test_accuracy.py  test_batch.py  test_common.py  test_cutoff.py  test_roc.py  test_roc_test.py
tests/doseresponse/: test_batch.py  test_bmd.py  test_common.py  test_fit.py  test_models.py  test_potency.py
tests/epi/: test_epi.py
tests/gee/: test_gee.py
tests/meta/: test_meta.py
tests/pk/: test_common.py  test_nca.py
tests/power/: test_anova.py  test_common.py  test_means.py  test_noninferiority.py  test_proportions.py
(+10 files in other folders)
