[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pystatsbio"
version = "1.0.0"
description = "Biotech and pharmaceutical statistical computing for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Hai-Shuo", email = "contact@sgcx.org" },
]
keywords = [
    "biostatistics",
    "pharmacokinetics",
    "dose-response",
    "clinical-trials",
    "sample-size",
    "power-analysis",
    "diagnostics",
    "gpu",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "pystatistics>=0.1.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
docs = [
    "sphinx>=6.0",
    "furo",
]
all = [
    "pystatsbio[gpu,dev,docs]",
]

[project.urls]
Homepage = "https://sgcx.org/technology/pystatsbio/"
Documentation = "https://sgcx.org/docs/pystatsbio/"
Repository = "https://github.com/sgcx-org/pystatsbio"
Issues = "https://github.com/sgcx-org/pystatsbio/issues"

[tool.hatch.build.targets.wheel]
packages = ["pystatsbio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not slow'"
markers = [
    "slow: marks tests as slow (GPU stress, large-scale). Deselected by default. Run with: pytest -m slow",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
strict = true
